--- a/run/Dockerfile-tests
+++ b/run/Dockerfile-tests
@@ -9,10 +9,11 @@ COPY src/requirements.txt .
 
 # Copy sources into the container at /app
 COPY src/. .
+COPY tests/. .
 
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Run application  when the container launches
-ENTRYPOINT ["python", "start.py"]
+ENTRYPOINT ["python", "tests.py"]
